platform/gitops-pipelines/delivery/clusters/cc-cluster/core-services/components/ml-services/kubeflow/ui-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kubeflow-istio-ingressgateway
  namespace: istio-system
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: 'true'
    nginx.ingress.kubernetes.io/ssl-passthrough: 'false'
    nginx.ingress.kubernetes.io/ssl-redirect: 'false'
spec:
  rules:
    - host: "kubeflow.<DOMAIN_NAME>"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: istio-ingressgateway
                port:
                  name: http2
  tls:
    - hosts:
        - "kubeflow.<DOMAIN_NAME>"
      secretName: kubeflow-istio-ingressgateway-tls
